About div width and span weight fix. Removal of console noise. Attempted fix at gif loading failure.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="viewport">
 			<div>
 				<h2>Yawza!</h2>
-				<h6>This page was made to be experienced in wider screens and with the use of a mouse. But don't worry, you can still experience <span>some</span> of it!</h6>
+				<h6>This page was made to be experienced in wider screens. But don't worry, you can still experience <span>some</span> of it!</h6>
 			</div>
 		
 		</div>
@@ -70,8 +70,8 @@
 			<br>
 			<p><span>~ W A V E ~</span>  is an ambient-focused web application made with YOUTUBE's player API where you get to play some of my favorite,
 				 summery korean pop jams, layered over an interactive background inspired in the (now dead) <br><span>v a p o r w a v e</span> aesthetic.</p>
-				 <p>For more info or bug alerts, feel free to e-mail me at <br><span id="email">mb.monteiroa@gmail.com</span></p>
-				 <br>
+				 <br><br><p>For more info or bug alerts, feel free to e-mail me at <br><span id="email">mb.monteiroa@gmail.com</span></p>
+				 <br><br>
 				 <p>Enjoy!</p>
 		</div>
 
