Added load screen animation (not timed), fixed imgs' preload path.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 
 	
 	<body>
-		<div id="loadScreen"></div>
+		<div id="loadScreen">
+			<div>
+				<img id="wave1" src="test/wave.gif">
+			</div>
+			<div>
+				<img id="wave2" src="test/wave2.gif">
+			</div>
+		</div>
 		
 		<div id="viewport">
 			<div>
@@ -190,7 +197,7 @@
 				<img src="test/city.png">
 			</div>
 			<div class="backg" id="b4">
-				<img src="test/front.png">
+				<!--<img src="test/front.png">-->
 			</div>
 			<div class="backg" id ="b5">
 			<!--palm tree left2-->
