Background img is initially loaded to a smaller res.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<div class="background">
 			
 			<div class="backg" id="b1">
-				<img src="test/sky.png">
+				<img class="async" data-src="test/sky.png" src="test/sky-min.png" alt="sky background">
 			</div>
 			<div class="backg" id="b2">
 				<img id="sky" src="test/city2.png">
