Applied same small scale versions to city, city2.png and face1.gif.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				</div>
 				<div class="block" id ="block5">
 					<!--face whole-->
-					<img src="test/face1.gif">
+					<img class="async" src="test/face1-min.gif" data-src="test/face1.gif">
 				</div>
 				
 				<div class="block" id ="block6">
@@ -191,10 +191,10 @@
 				<img class="async" data-src="test/sky.png" src="test/sky-min.png" alt="sky background">
 			</div>
 			<div class="backg" id="b2">
-				<img id="sky" src="test/city2.png">
+				<img id="sky" class="async" src="test/city2-min.png" data-src="test/city2.png">
 			</div>
 			<div class="backg" id="b3">
-				<img src="test/city.png">
+				<img class="async" src="test/city-min.png" data-src="test/city.png">
 			</div>
 			<div class="backg" id="b4">
 				<!--<img src="test/front.png">-->
