Wave load gifs canvas reduced in height, overall adjustment of load screen div placement. Containers' divs adjusted to viewport size.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
 	
 	<body>
 		<div id="loadScreen">
-			<div>
+			<div class="waveload">
 				<img id="wave1" src="test/wave.gif">
 			</div>
-			<div>
+			<div class="waveload">
 				<img id="wave2" src="test/wave2.gif">
+			</div>
+			<div id="message">
+				<h4 style="color: white; opacity:1; text-decoration:none; cursor: auto;">This page performs best with Google Chrome.</h4>
 			</div>
 		</div>
 		
 		<div id="viewport">
 			<div>
-				<h2>Yawza!</h2>
+				<h2 style="text-decoration: underline;">Yawza!</h2>
 				<h6>This page was made to be experienced in wider screens. But don't worry, you can still experience <span>some</span> of it!</h6>
 			</div>
 		
@@ -76,8 +79,8 @@
 		<div id="about-txt" class="">
 			<h4>ABOUT</h4>
 			<br>
-			<p><span>~ W A V E ~</span>  is an ambient-focused web application made with YOUTUBE's player API where you get to play some of my favorite,
-				 summery korean pop jams, layered over an interactive background inspired in the (now dead) <br><span>v a p o r w a v e</span> aesthetic.</p>
+			<p><span>~ WAVE ~ </span>  is a web application made with YOUTUBE's player API where you get to play some of my favorite
+				 korean pop summer jams, layered over an interactive background inspired in the (now dead) vaporwave aesthetic.</p>
 				 <br><br><p>For more info or bug alerts, feel free to e-mail me at <br><span id="email">mb.monteiroa@gmail.com</span></p>
 				 <br><br>
 				 <p>Enjoy!</p>
