--- a/index.html
+++ b/index.html
@@ -102,36 +102,36 @@
 				</div>
 				<div class="block" id ="block17">
 					<!--face shadow-->
-					<img src="test/shadow_face.gif">
+					<img src="https://i.imgur.com/jHzmUSt.gif">
 				</div>
 				<div class="block" id ="block1">
 					<!--lip right-->
-					<img src="test/lip_right.png">
+					<img src="https://i.imgur.com/jzsIO7s.png">
 				</div>
 				<div class="block" id ="block2">
 					<!--lip left-->
-					<img src="test/lip_left.png">
+					<img src="https://i.imgur.com/uZlBCCw.png">
 				</div>
 				<div class="block" id ="block3">
 					<!--nose bridge-->
-					<img src="test/nose_bridge.png">
+					<img src="https://i.imgur.com/ezmCcYw.png">
 				</div>
 				<div class="block" id ="block4">
 					<!--nostril-->
-					<img src="test/nostril.png">
+					<img src="https://i.imgur.com/s5N3E9Y.png">
 				</div>
 				<div class="block" id ="block5">
 					<!--face whole-->
-					<img class="async" src="test/face1-min.gif" data-src="test/face1.gif">
+					<img class="async" src="https://i.imgur.com/m9VHejW.gif" data-src="test/face1.gif">
 				</div>
 				
 				<div class="block" id ="block6">
 					<!--face right-->
-					<img src="test/face2.png">
+					<img src="https://i.imgur.com/C7Xiv9P.png">
 				</div>
 				<div class="block glasses" id ="block7">
 					<!--glasses front-->
-					<img src="test/glasses1.png">
+					<img src="https://i.imgur.com/IZY68tj.png">
 					<svg width="0" height="0">
 							<filter id="blurMe">
 									<feGaussianBlur in="SourceGraphic" stdDeviation="5" />
@@ -145,43 +145,43 @@
 				</div>
 				<div class="block" id ="block8">
 					<!--glasses lens (lighted)-->
-					<img id="gl" src="test/glasses_lens.png">
+					<img id="gl" src="https://i.imgur.com/F0NUnHS.png">
 				</div>
 				<div class="block" id ="block9">
 					<!--hair left-->
-					<img src="test/hair1.gif">
+					<img src="https://i.imgur.com/tSHWITn.gif">
 				</div>
 				<div class="block" id ="block10">
 					<!--hair right-->
-					<img src="test/hair2.gif">
+					<img src="https://i.imgur.com/DXv9wxH.gif">
 				</div>
 				<div class="block" id ="block11">
 					<!--hair main-->
-					<img src="test/hairmain.gif">
+					<img src="https://i.imgur.com/keGToBh.gif">
 				</div>
 				<div class="block" id ="block12">
 					<!--neck-->
-					<img src="test/neck.png">
+					<img src="https://i.imgur.com/fzTyUju.png">
 				</div>
 				<div class="block" id ="block13">
 					<!--torso-->
-					<img src="test/torso.png">
+					<img src="https://i.imgur.com/Gd1tJLp.png">
 				</div>
 				<div class="block" id ="block14">
 					<!--shoulder-->
-					<img src="test/shoulder.png">
+					<img src="https://i.imgur.com/lWKiaOs.png">
 				</div>
 				<div class="block" id ="block15">
 					<!--glass-->
-					<img src="test/glass.png">
+					<img src="https://i.imgur.com/Oo4HmDA.png">
 				</div>
 				<div class="block" id ="block18">
 					<!--glass light-->
-					<img src="test/glass-light.png">
+					<img src="https://i.imgur.com/fKYH6wO.png">
 				</div>
 				<div class="block" id ="block16">
 					<!--hand-->
-					<img src="test/hand.png">
+					<img src="https://i.imgur.com/uoShHuv.png">
 				</div>
 			</div>
 
@@ -191,13 +191,13 @@
 			<div class="background">
 			
 			<div class="backg" id="b1">
-				<img class="async" data-src="test/sky.png" src="test/sky-min.png" alt="sky background">
+				<img class="async" data-src="test/sky.png" src="https://i.imgur.com/ppzzx9n.png" alt="sky background">
 			</div>
 			<div class="backg" id="b2">
-				<img id="sky" class="async" src="test/city2-min.png" data-src="test/city2.png">
+				<img id="sky" class="async" src="https://i.imgur.com/sMQEkuc.png" data-src="test/city2.png">
 			</div>
 			<div class="backg" id="b3">
-				<img class="async" src="test/city-min.png" data-src="test/city.png">
+				<img class="async" src="https://i.imgur.com/Q9pmUbO.png" data-src="test/city.png">
 			</div>
 			<div class="backg" id="b4">
 				<!--<img src="test/front.png">-->
