Added light reflex to shades, reformulated playlist tracks, load screen now also dependent of youtube js doc.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	
 	<body>
+		<div id='why'> <h1>If you see this, </br>you must go back </br>and refresh the page.</h1> </div>
 		<div id="loadScreen">
 			<div class="waveload">
 				<img id="wave1" src="test/wave.gif">
@@ -98,6 +99,8 @@
 			<div class="face">
 				<!--song name display-->
 				<div class="song-name clip hide">
+					<div class="fade">
+					</div>
 					<h2 id="movtxt" class="mov-text"></h2>
 				</div>
 				<div class="block" id ="block17">
