Added favicon, deleted unnecessary console outputs.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 	
 	<head>
 	<meta charset="UTF-8">
-		<title>This is a funky prototype</title>
+		<title>~w a v e~</title>
 		<!--<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" />-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/viewport.css">
 		<link rel="stylesheet" href="youtube/style.css">
+		<!--favicon-->
+		<link rel="icon" type="image/png" href="css/favicon.png">
 		<!--Roboto Font import-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400i,500&display=swap" rel="stylesheet">
 		<!--jQuery import-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
-
 	
 	<body>
 		<div id='why'> <h1>If you see this, </br>you must go back </br>and refresh the page.</h1> </div>
