Viewport sizes fixed, now compatible with portrait mode in tablets and wider screens. Disabled data caching.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 	
 	<head>
 	<meta charset="UTF-8">
-		<title>~w a v e~</title>
-		<!--<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" />-->
+		<title>~ w a v e ~</title>
+		<!--viewport-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+
+		<!--stylesheets-->
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/viewport.css">
 		<link rel="stylesheet" href="youtube/style.css">
+
+		<!--cache block-->
+		<meta http-equiv='cache-control' content='no-cache'>
+		<meta http-equiv='expires' content='0'>
+		<meta http-equiv='pragma' content='no-cache'>
+
 		<!--favicon-->
 		<link rel="icon" type="image/png" href="css/favicon.png">
 		<!--Roboto Font import-->
@@ -81,7 +89,7 @@
 		<div id="about-txt" class="">
 			<h4>ABOUT</h4>
 			<br>
-			<p><span>~ WAVE ~ </span>  is a web application made with YOUTUBE's player API where you get to play some of my favorite
+			<p><span>~ wave ~ </span>  is a web application made with YOUTUBE's player API where you get to play some of my favorite
 				 korean pop summer jams, layered over an interactive background inspired in the (now dead) vaporwave aesthetic.</p>
 				 <br><br><p>For more info or bug alerts, feel free to e-mail me at <br><span id="email">mb.monteiroa@gmail.com</span></p>
 				 <br><br>
@@ -187,6 +195,8 @@
 					<!--hand-->
 					<img src="test/hand.png">
 				</div>
+
+			<!--/face-->
 			</div>
 
 		</div> <!--/container-->
