Sky dimensions for 4k displays now width dependent (and not height dependent). Removed old images not being used. Added media share thumbnail.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 		<!--favicon-->
 		<link rel="icon" type="image/png" href="css/favicon.png">
+
+		<!--link share thumbnail-->
+		<meta property="og:image" content="thumb.png">
+		<meta property="og:image:type" content="image/png">
+
 		<!--Roboto Font import-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400i,500&display=swap" rel="stylesheet">
 		<!--jQuery import-->
